2008-08-05  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (search_by_expression): Don't mimic.
	Give the same results from search.

2008-08-04  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #467586

	* mail/mail-stub-exchange.c: (get_folder_contents_online),
	(get_folder_info_data), (rename_folder): Update the folders_by_name hash
	tables for the renamed folder and also all its subfolders and refresh
	the messages contained in them

2008-08-04  Veerapuram Varadhan <vvaradhan@novell.com>

	** Part of fix for bug #467586

	* camel/camel-exchange-store.c: (exchange_rename_folder),
	(stub_notification):
	* mail/mail-stub-exchange.c: (get_folder_info_data),
	(get_folder_info), (rename_folder): Get the folder hierarchy once 
	renamed.

2008-08-04  Bharath Acharya  <abharath@novell.com>

	** Part of fix for bug #543427

	* camel/camel-exchange-summary.c:
	(camel_exchange_summary_add_offline),
	(camel_exchange_summary_add_offline_uncached): Use camel_pstring_strdup

2008-08-04  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #543427

	* camel/camel-exchange-folder.c:
	(camel_exchange_folder_add_message):
	* camel/camel-exchange-journal.c: (exchange_entry_play_append),
	(exchange_entry_play_transfer), (update_cache): 
	Use camel_pstring_strdup. The free'ing is handled by message_info_free.

2008-08-04  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #543075

	* camel/camel-exchange-folder.c: (append_message_data): The info is 
	usually NULL when you drag and drop an embedded mail to a folder. This 
	check should get your message back into the desired folder.

2008-08-03  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder.c (search_by_uids):
	Remove unused variables.

2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (search_by_uids): Move this to disk
	summary.

2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>
